# vit-multilabel

./: .gitignore  README.md  hello.py  pyproject.toml
data_generation/: fetch_unsplash.py  siglip_labeling.py
inference/: modal.py  onnx.py
train/: train.py
